force-app/main/default/objects/Promotional_Product__c/Promotional_Product__c.object-meta.xml
<CustomObject>
    <description>a product that is offered as part of a partnership promotion</description>
    <label>Promotional Product</label>
    <nameField>
        <displayFormat>PP-{0000000000}</displayFormat>
        <label>Promotional Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotional Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>