force-app/main/default/objects/Promotional_Product__c/fields/Partnership_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Promotion__c</fullName>
    <description>The Partnership Promotion that this Product belongs to</description>
    <inlineHelpText>The Partnership Promotion that this Product belongs to</inlineHelpText>
    <label>Marketing Activity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Promotional Product must belong to a Partnership Promotion</errorMessage>
        <filterItems>
            <field>Marketing_Activity__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partnership Promotion</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marketing_Activity__c</referenceTo>
    <relationshipLabel>Promotional Products</relationshipLabel>
    <relationshipName>Promotional_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>