force-app/main/default/objects/Promotional_Product__c/fields/Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Value__c</fullName>
    <description>The value of the Product (25% ,  £100 , 1000 airmiles etc...)</description>
    <inlineHelpText>The value of the Product (25% ,  £100 , 1000 airmiles etc...)</inlineHelpText>
    <label>Product Value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>