force-app/main/default/objects/Promotional_Product__c/fields/Product_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Value_Type__c</fullName>
    <description>the Type of value associated to the promotion</description>
    <inlineHelpText>the Type of value associated to the promotion</inlineHelpText>
    <label>Product Value Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>£/€</fullName>
            </value>
            <value>
                <fullName>Air Miles</fullName>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>