force-app/main/default/objects/Promotional_Product__c/fields/Promotion_Product__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Product__c</fullName>
    <description>The product chosen to be part of this Promotion</description>
    <inlineHelpText>The product chosen to be part of this Promotion</inlineHelpText>
    <label>Promotion Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Miles or points</fullName>
            </value>
            <value>
                <fullName>VIP Card</fullName>
            </value>
            <value>
                <fullName>VIP Lounge access</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage Voucher</fullName>
            </value>
            <value>
                <fullName>Shopping Express</fullName>
            </value>
            <value>
                <fullName>Shopping Packages</fullName>
            </value>
            <value>
                <fullName>Chauffeur Services</fullName>
            </value>
            <value>
                <fullName>Hands-free Shopping</fullName>
            </value>
            <value>
                <fullName>Valet Parking</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Welcome gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>